# mihomo-subscription-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
config/: route-expectations.yaml  rule-audit-baseline.yaml
config/mihomo/: base.yaml  groups.yaml  rules.yaml  validation.yaml
config/mihomo/overlays/: android.yaml  macos.yaml
docs/: design.md
rules/custom/: developer_global.txt
scripts/: build_all.py  validate_outputs.py
sources/: upstream.yaml
src/subscription_builder/: __init__.py  cli.py  config.py  models.py  nodes.py  render.py  route_expectations.py  rules.py  runtime_smoke.py  validate.py
templates/: mihomo.yaml.j2  shadowrocket.conf.j2
tests/: test_nodes.py  test_render.py  test_rules.py
